--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ body {
 
 body.home-page {
     background-image: url('images/family-cookout.avif');    
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 #main-page li:hover {
