--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,24 @@ body.home-page {
     background-size: cover;
 }
 
+.bg-falafel {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(120deg, #43d41e, #f2f3ed);
+}
+
+.bg-enchiladas {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(120deg, #c21c1c, #dbf300);
+}
+
+.bg-cake {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(120deg, #faf7f7, #dbf300);
+}
+
 #main-page li:hover {
     color: red;
 }
