--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 body.home-page {
-    background-image: url('images/family-cookout.avif');    
+    background-image: url('images/food.jpeg');    
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
@@ -36,6 +36,8 @@ body.home-page {
 
 #title {
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.8); 
+    border-radius: 5px;
 }
 
 .text-centered {
@@ -48,6 +50,9 @@ body.home-page {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    background-color: rgba(255, 255, 255, 0.8); /* Light background with opacity */
+    padding: 10px;
+    border-radius: 10px;
 }
 
 .text-centered li {
@@ -57,6 +62,9 @@ body.home-page {
 .text-centered a {
     text-decoration: none;
     color: #030303;
+    background-color: rgba(11, 72, 102, 0.8); /* Light background with opacity */
+    padding: 5px;
+    border-radius: 5px;
 }
 
 /* end of main page */
